--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,3 +1,19 @@
 <div class="page-header">
   <h3>Available senders</h3>
 </div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <input class="form-control" type="text" placeholder="Search a bot" ng-model="titleFilter"/>
+  </div>
+
+  <div class="col-md-6 col-md-offset-3" style="padding-top: 20px;">
+    <ul class="list-group" ng-controller="BotsController">
+      <li class="list-group-item"ng-repeat="bot in bots | filter:titleFilter">
+        <a href="#/bot/{{bot.id}}">
+          {{bot.name}}
+        </a>
+        <span class="badge">0</span>
+      </li>
+    </ul>
+  </div>
+</div>
