--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -7,12 +7,12 @@
   </div>
 
   <div class="col-md-6 col-md-offset-3" style="padding-top: 20px;">
-    <ul class="list-group" ng-controller="BotsController">
-      <li class="list-group-item"ng-repeat="bot in bots | filter:titleFilter">
+    <ul class="list-group">
+      <li class="list-group-item" ng-repeat="bot in bots | filter:titleFilter | orderBy:'name'">
         <a href="#/bot/{{bot.id}}">
           {{bot.name}}
         </a>
-        <span class="badge">0</span>
+        <span class="badge">{{bot.fileCount}}</span>
       </li>
     </ul>
   </div>
