naive connection error handler

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,3 +1,6 @@
+<div class="alert alert-danger" ng-show="errors.show">
+  {{errors.content}}
+</div>
 <div class="page-header">
   <h3>Available senders</h3>
 </div>
