first naive unit tests

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -2,7 +2,7 @@
   {{errors.content}}
 </div>
 <div class="page-header">
-  <h3>Available senders</h3>
+  <h3>Saved senders</h3>
 </div>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
