--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -23,30 +23,31 @@ html
 
     body(class=clazz, ng-app="app", ng-controller="OrchestratorController")
         .container
-            nav.navbar.navbar-default(role="navigation")
-                .navbar-header
-                    button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                    a.navbar-brand(href="/") #{title}
+            nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+                .container
+                    .navbar-header
+                        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
+                            span.icon-bar
+                            span.icon-bar
+                            span.icon-bar
+                            span.icon-bar
+                        a.navbar-brand(href="/") #{title}
 
-                .collapse.navbar-collapse#navbar-main
-                    ul.nav.navbar-nav
-                        li(class=clazz==='home'?'active':'')
-                            a(href="/")= t("app.menu.home")
-                    ul.nav.navbar-nav.navbar-right
-                        li.dropdown.pull-right
-                            a.dropdown-toggle(href="", data-toggle="dropdown")
-                                = t("locale")
-                                | &nbsp;
-                                b.caret
-                            ul.dropdown-menu
-                                li
-                                    a(href="?setLng=en") English
-                                li
-                                    a(href="?setLng=fr") Français
+                    .collapse.navbar-collapse#navbar-main
+                        ul.nav.navbar-nav
+                            li(ng-class="{active:$location.path() == '/index'}")
+                                a(href="#/index")= t("app.menu.home")
+                        ul.nav.navbar-nav.navbar-right
+                            li.dropdown.pull-right
+                                a.dropdown-toggle(href="", data-toggle="dropdown")
+                                    = t("locale")
+                                    | &nbsp;
+                                    b.caret
+                                ul.dropdown-menu
+                                    li
+                                        a(href="?setLng=en") English
+                                    li
+                                        a(href="?setLng=fr") Français
         .container
             block content
         script(src="/bower_components/angular/angular.js")
