--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -36,7 +36,7 @@ html
                     .collapse.navbar-collapse#navbar-main
                         ul.nav.navbar-nav
                             li(ng-class="{active:$location.path() == '/index'}")
-                                a(href="#/index")= t("app.menu.home")
+                                a(href="#/index")= t("app.menu.bots")
                         ul.nav.navbar-nav.navbar-right
                             li.dropdown.pull-right
                                 a.dropdown-toggle(href="", data-toggle="dropdown")
