--- a/public/templates/bot.html
+++ b/public/templates/bot.html
@@ -1,12 +1,12 @@
 <div class="page-header">
-  <h3>Available files of {{bot.name}}</h3>
+  <h3>Registered files of {{bot.name}}</h3>
 </div>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3 search-field">
     <input class="form-control" type="text" placeholder="Search a file" ng-model="fileFilter"/>
   </div>
 
-  <div class="col-md-8 col-md-offset-2" style="padding-top: 20px;">
+  <div class="col-md-8 col-md-offset-2">
     <ul class="list-group">
       <li class="list-group-item list-group-item-info" ng-repeat="file in bot.fileSet | filter:fileFilter">
         {{file.name}}
