--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,7 +1,8 @@
 <div class="alert alert-danger" ng-show="errors.show">
   {{errors.content}}
 </div>
-<div class="row">
+<div class="row" ng-show="!errors.show">
+  <button class="btn btn-primary" ng-click="refreshList()">Refresh</button>
   <div class="col-md-6 col-md-offset-3 search-field">
     <input class="form-control" type="text" placeholder="Search a bot" ng-model="titleFilter"/>
   </div>
@@ -12,6 +13,7 @@
         <a href="#/bot/{{bot.id}}">
           {{bot.name}}
         </a>
+        <span>{{bot.lastChecked | lastCheckedTime:currentDate}}</span>
         <span class="badge">{{bot.fileCount}}</span>
       </li>
     </ul>
