--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -2,6 +2,15 @@ body {
   padding-top: 70px;
 }
 
+.list-group {
+  padding-left: 15px;
+}
+
 .search-field {
   padding-bottom: 20px;
+}
+
+.checked-time {
+  float: right;
+  padding-right: 20px;
 }
