resolve work around

--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -21,7 +21,7 @@ html
         link(href='/bower_components/bootstrap/dist/css/bootstrap.css', rel='stylesheet', type='text/css')
         link(href="/genere/css/style.css", rel='stylesheet', type='text/css')
 
-    body(class=clazz, ng-app="app", ng-controller="OrchestratorController", ng-cloak)
+    body(class=clazz, ng-app="app", ng-controller="OrchestratorController")
         .container
             nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
                 .container
