--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,7 +1,7 @@
 <div class="alert alert-danger" ng-show="errors.show">
   {{errors.content}}
 </div>
-<div class="row" ng-show="!errors.show">
+<div class="row" ng-show="bots.$resolved && !errors.show">
   <button class="btn btn-primary" ng-click="refreshList()">Refresh</button>
   <div class="col-md-6 col-md-offset-3 search-field">
     <input class="form-control" type="text" placeholder="Search a bot" ng-model="titleFilter"/>
