--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -18,7 +18,7 @@ html
 
 
         link(href='/bower_components/bootstrap/dist/css/bootstrap.css', rel='stylesheet', type='text/css')
-        link(href="/genere/css/style.css", rel='stylesheet', type='text/css')
+        != css("style")
 
     body(class=clazz, ng-app="app", ng-controller="OrchestratorController")
         .container
@@ -49,11 +49,6 @@ html
                                         a(href="?setLng=fr") Français
         .container
             block content
-        script(src="/bower_components/angular/angular.js")
-        script(src="/bower_components/angular-resource/angular-resource.js")
-        script(src="/bower_components/angular-sanitize/angular-sanitize.js")
-        script(src="/bower_components/angular-route/angular-route.js")
-        script(src="/bower_components/jquery/jquery.js")
-        script(src="/bower_components/bootstrap/dist/js/bootstrap.js")
-        script(src="/configuration.js")
+
+        != js("vendor")
         block js
