bad things are bad

--- a/views/login/index.jade
+++ b/views/login/index.jade
@@ -20,7 +20,7 @@ html
         .panel.panel-default.center-block.text-center(id="login", ng-controller="LoginController")
           .logo
             a(href="/")
-              span(style="text-indent: -4000px;") Logo xdcc-webapp
+              span Logo xdcc-webapp
           p.title Connexion à Xdcc Web App
           div
             form(role="form", name="login", ng-submit="connect(credentials)")
