--- a/views/templates/login/index.jade
+++ b/views/templates/login/index.jade
@@ -8,7 +8,9 @@
       div
         form(role="form", name="login", ng-submit="connect(credentials)")
           .form-group.has-feedback
-            input.form-control(type="text", ng-model="credentials.login", placeholder="Login", required="")
+            input.form-control(type="text", ng-model="credentials.login", placeholder="Identifiant", required="")
           .form-group.has-feedback
             input.form-control(type="password", ng-model="credentials.password", placeholder="Mot de passe", required="")
+          .alert.alert-danger(ng-if="errors")
+            div(ng-repeat="error in errors") {{ error }}
           button.btn.btn-primary.btn-lg.btn-block(type="submit") Se connecter
