--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,7 +1,7 @@
 body {
 	margin:0;
   color: #5C5C5C;
-  font-family: 'PT Sans',Helvetica;
+  font-family: 'PT Sans', Helvetica, Serif;
   font-size: 14px;
   background-color: #F5F5F5;
 }
@@ -13,6 +13,15 @@ body {
 .navbar-brand {
   background: url("/img/icon.png") no-repeat 0 11px;
   background-size: 30px 30px;
+}
+
+body header nav {
+  width: 100%!important;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
+  -moz-box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
+  border: none;
 }
 
 body header nav .navbar-nav li.login a {
