--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -17,7 +17,7 @@ html
 
 
 
-    link(href="/bower_components/bootstrap/dist/css/bootstrap.css", rel="stylesheet", type="text/css")
+    link(href="/bower_components/bootstrap/dist/css/bootstrap.min.css", rel="stylesheet", type="text/css")
     link(href=revision("/genere/css/style.css"), rel="stylesheet", type="text/css")
 
   body.xdcc-webapp-pages(id=id, ng-app="xdcc", ng-controller="OrchestratorController")
