update bot show template, refactoring

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,3 +1,6 @@
+@gray-border: #ddd;
+@gray-hover: #f5f5f5;
+
 body {
 	margin:0;
   color: #5C5C5C;
@@ -137,4 +140,51 @@ body footer ul.xdcc-webapp-links li a.en,
 body footer ul.xdcc-webapp-links li a.fr {
   text-indent: -4000px;
   width: 21px;
+}
+
+.pack-list-group {
+  margin-top: 10px;
+}
+
+.pack-row {
+  display: table;
+  width: 100%;
+  padding: 12px 0;
+}
+
+.pack-row:hover {
+  background-color: @gray-hover;
+}
+
+.pack-row:not(:first-child) {
+  border-top: 1px solid @gray-border;
+}
+
+.pack-row div {
+  float: none;
+}
+
+.pack-action {
+  visibility: hidden;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.pack-row:hover .pack-action {
+  visibility: visible;
+}
+
+.pack-action .btn:not(:first-child) {
+  margin-left: 2px;
+}
+
+.pack-id {
+  display: table-cell;
+  vertical-align: middle;
+  font-weight: bold;
+}
+
+.pack-name {
+  display: table-cell;
+  vertical-align: middle;
 }
