--- a/views/templates/bot/index.jade
+++ b/views/templates/bot/index.jade
@@ -1,15 +1,15 @@
 .container
   .row
-    .col-md-4.col-md-offset-1.search-field
+    .col-sm-4.col-sm-offset-1.search-field
       input.form-control(type="text" placeholder=t("app.bot_list.search") ng-model="titleFilter")
-    .col-md-2
+    .col-sm-2
       .sort.btn-group
-        label.btn.btn-default(ng-model="sortOrder", btn-radio="orderOptions.ASCENDING")
+        label.btn.btn-default(ng-model="sortOrder", btn-radio="orderOptions.ascending")
           span.glyphicon.glyphicon-sort-by-alphabet
-        label.btn.btn-default(ng-model="sortOrder", btn-radio="orderOptions.DESCENDING")
+        label.btn.btn-default(ng-model="sortOrder", btn-radio="orderOptions.descending")
           span.glyphicon.glyphicon-sort-by-alphabet-alt
   .row
-    .col-md-10.col-md-offset-1
+    .col-sm-10.col-sm-offset-1
       .list-group.bot-list-group
         a.list-group-item.col-xs-3(ng-repeat="bot in bots | filter:titleFilter | orderBy:'name':sortOrder", ng-href="#/bot/{{bot.id}}")
           | {{bot.name}}
