extract login logic to a different app

--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -38,8 +38,8 @@ html
                 a(href="#/bot")= t("app.menu.bots")
             .navbar-right
               ul.nav.navbar-nav
-                li.login(ng-cloak="", ng-if="!currentUser && $location.path() !== '/login'")
-                  a.btn.btn-default.btn-navbar(type="button", href="#/login")= t("app.menu.log_in")
+                li.login(ng-cloak="", ng-if="!currentUser")
+                  a.btn.btn-default.btn-navbar(type="button", href="/login")= t("app.menu.log_in")
                 li(ng-cloak="", ng-if="currentUser" ng-controller="ConnectedUserController")
                   a.dropdown-toggle(data-toggle="dropdown", href="")
                     span {{ currentUser.login }}&nbsp;
