--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,3 +1,10 @@
+// TODO *** Must have a way to import this directly from bootstrap
+@brand-primary: darken(#428bca, 6.5%);
+@brand-success: #5cb85c;
+@brand-info:    #5bc0de;
+@brand-warning: #f0ad4e;
+@brand-danger:  #d9534f;
+
 @gray-border: #ddd;
 @gray-hover: #f5f5f5;
 
@@ -150,7 +157,22 @@ body footer ul.xdcc-webapp-links li a.fr {
   font-weight: bold;
 }
 
+.pack-bot-name {
+  display: table-cell;
+  vertical-align: middle;
+}
+
 .pack-name {
   display: table-cell;
   vertical-align: middle;
+}
+
+.current-pack {
+  margin-top: 10px;
+  display: table;
+  width: 100%;
+  padding: 12px 0;
+  background-color: @brand-primary;
+  color: #ffffff;
+  border-radius: 4px;
 }
