--- a/views/templates/queue/index.jade
+++ b/views/templates/queue/index.jade
@@ -1,6 +1,7 @@
 .container
-  .alert.alert-info(ng-cloak="", ng-show="queue.length === 0", role="alert")
-     = t("app.queue.empty")
+  .row(ng-cloak="", ng-show="queue.length === 0")
+    .col-sm-4.col-sm-offset-4.text-center.alert.alert-info(role="alert")
+       = t("app.queue.empty")
   .row(ng-cloak="", ng-show="queue.length > 0")
     .col-sm-4.col-sm-offset-1.search-field
       input.form-control(type="text", placeholder=t("app.queue.search"), ng-model="fileFilter")
