--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,2 +1,6 @@
 @import "includes/element";
+@import "includes/components";
 @import "includes/fix";
+@import "includes/views/index";
+@import "includes/views/bot/index";
+@import "includes/views/queue/index";
