--- a/views/templates/queue/index.jade
+++ b/views/templates/queue/index.jade
@@ -15,11 +15,11 @@
   .row(ng-cloak="", ng-show="queue.length > 0")
     .col-sm-10.col-sm-offset-1
       .pack-list-group
-        .pack-row(ng-repeat="pack in queue | filter:fileFilter")
+        .pack-row(ng-repeat="pack in queue.packMap | filter:fileFilter")
           .col-sm-3.pack-name
             span {{ pack.botName }}
           .col-sm-7.pack-name
             span {{ pack.name }}
           .col-sm-2.pack-action.text-right
-            a.btn.btn-danger.btn-sm(type="button", ng-click="removePack($index)", aria-label="Remove", title=t('app.queue.remove'))
+            a.btn.btn-danger.btn-sm(type="button", ng-click="removePack(pack.id)", aria-label="Remove", title=t('app.queue.remove'))
               span.glyphicon.glyphicon-remove(aria-hidden="true")
