--- a/src/less/includes/components.less
+++ b/src/less/includes/components.less
@@ -1,5 +1,6 @@
 @gray-border: #ddd;
 @gray-hover: #f5f5f5;
+@success-color: #3c763d;
 
 .pack-list-group {
   margin-top: 10px;
@@ -11,8 +12,29 @@
   padding: 12px 0;
 }
 
+.pack-list-group > .pack-row:first-child {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.pack-list-group > .pack-row:last-child {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.pack-row-success {
+  color: @success-color;
+  background-color: #dff0d8;
+}
+
 .pack-row:hover {
   background-color: @gray-hover;
+}
+
+.pack-row-success:hover,
+.pack-row-success:focus {
+  color: @success-color;
+  background-color: #d0e9c6;
 }
 
 .pack-row:not(:first-child) {
