--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -4,7 +4,7 @@ html
 
     title #{title}
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width', initial-scale="1.0")
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='yuyuu')
     link(rel='icon', type="image/png",   href='/img/favicon.png')
