--- a/src/less/includes/components.less
+++ b/src/less/includes/components.less
@@ -65,12 +65,12 @@
   font-weight: bold;
 }
 
-.pack-bot-name {
+.pack-bot-title {
   display: table-cell;
   vertical-align: middle;
 }
 
-.pack-name {
+.pack-title {
   display: table-cell;
   vertical-align: middle;
 }
