--- a/views/templates/bot/show.jade
+++ b/views/templates/bot/show.jade
@@ -1,7 +1,7 @@
 .container
   .row
     .col-sm-4.col-sm-offset-2.search-field
-      input.form-control(type="text", placeholder=t("app.bot.search"), ng-model="fileFilter")
+      input.form-control(type="text", placeholder=t("app.bot.search"), ng-model="packFilter")
     .col-sm-2.sort.btn-group
       label.btn.btn-default(ng-model="sortOrder", btn-radio="orderOptions.ascending")
         span.glyphicon.glyphicon-sort-by-order
@@ -10,12 +10,12 @@
   .row
     .col-sm-8.col-sm-offset-2
       .pack-list-group
-        .pack-row(ng-repeat="pack in bot.fileSet | filter:fileFilter | orderBy:'position':sortOrder",
+        .pack-row(ng-repeat="pack in bot.packs | filter:packFilter | orderBy:'position':sortOrder",
             ng-class="{ 'pack-row-success': isPackInQueue(pack) }")
           .col-sm-1.pack-id
-            span \#{{ pack.position }}
-          .col-sm-8.pack-name
-            span {{ pack.name }}
+            span \#{{pack.position}}
+          .col-sm-8.pack-title
+            span {{pack.title}}
           .col-sm-3.pack-action.text-right
             a.btn.btn-default.btn-sm(type="button", ng-cloak="", ng-show="isAuthenticated() && !isPackInQueue(pack)",
                 ng-click="addToQueue(pack)", aria-label=t('app.bot.add_to_queue'), title=t('app.bot.add_to_queue'))
