--- a/views/templates/queue/index.jade
+++ b/views/templates/queue/index.jade
@@ -4,22 +4,22 @@
        = t("app.queue.empty")
   .row(ng-cloak="", ng-show="queue.length > 0")
     .col-sm-4.col-sm-offset-1.search-field
-      input.form-control(type="text", placeholder=t("app.queue.search"), ng-model="fileFilter")
+      input.form-control(type="text", placeholder=t("app.queue.search"), ng-model="packFilter")
   .row(ng-cloak="", ng-show="currentPack")
     .col-sm-10.col-sm-offset-1
       .current-pack
-        .col-sm-3.pack-bot-name
-          span {{ currentPack.botName }}
-        .col-sm-7.pack-name
-          span {{ currentPack.name }}
+        .col-sm-3.pack-bot-title
+          span {{currentPack.botNickname}}
+        .col-sm-7.pack-title
+          span {{currentPack.title}}
   .row(ng-cloak="", ng-show="queue.length > 0")
     .col-sm-10.col-sm-offset-1
       .pack-list-group
-        .pack-row(ng-repeat="pack in queue.packMap | filter:fileFilter")
-          .col-sm-3.pack-name
-            span {{ pack.botName }}
-          .col-sm-7.pack-name
-            span {{ pack.name }}
+        .pack-row(ng-repeat="pack in queue.packMap | filter:packFilter")
+          .col-sm-3.pack-title
+            span {{pack.botNickname}}
+          .col-sm-7.pack-title
+            span {{pack.title}}
           .col-sm-2.pack-action.text-right
-            a.btn.btn-danger.btn-sm(type="button", ng-click="removePack(pack.id)", aria-label="Remove", title=t('app.queue.remove'))
+            a.btn.btn-danger.btn-sm(type="button", ng-click="removePack(pack)", aria-label="Remove", title=t('app.queue.remove'))
               span.glyphicon.glyphicon-remove(aria-hidden="true")
