--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -50,14 +50,17 @@ html
               ul.nav.navbar-nav
                 li.login(ng-cloak="", ng-if="!currentUser")
                   a.btn.btn-default.btn-navbar(type="button", href="/login")= t("app.menu.log_in")
+                li(ng-if="currentUser")
+                  p.navbar-text
+                    span.glyphicon.glyphicon-stop(xdcc-client-state="", aria-hidden="true")
                 li(ng-cloak="", ng-if="currentUser", ng-controller="ConnectedUserController")
                   a.dropdown-toggle(data-toggle="dropdown", href="")
-                    span {{ currentUser.login }}&nbsp;
-                    span.caret()
+                    span {{currentUser.login}}&nbsp;
+                    span.caret
                   ul.dropdown-menu(role="menu")
                     li
                       a(href="", ng-click="disconnect()")
-                        span.glyphicon.glyphicon-log-out() &nbsp;
+                        span.glyphicon.glyphicon-log-out &nbsp;
                         = t("app.menu.log_out")
     block content
     footer
