--- a/views/templates/bot/show.jade
+++ b/views/templates/bot/show.jade
@@ -1,27 +1,26 @@
 .container
   .row
-    .col-sm-4.col-sm-offset-2.search-field
+    .col-xs-7.col-sm-4.col-xs-offset-1.col-sm-offset-2.search-field
       input.form-control(type="text", placeholder=t("app.bot.search"), ng-model="packFilter")
-    .col-sm-2.sort.btn-group
+    .col-xs-4.col-sm-2.sort.btn-group
       label.btn.btn-default(ng-model="sortOrder", btn-radio="orderOptions.ascending")
         span.glyphicon.glyphicon-sort-by-order
       label.btn.btn-default(ng-model="sortOrder", btn-radio="orderOptions.descending")
         span.glyphicon.glyphicon-sort-by-order-alt
   .row
-    .col-sm-8.col-sm-offset-2
-      .pack-list-group
-        .pack-row(ng-repeat="pack in bot.packs | filter:packFilter | orderBy:'position':sortOrder",
-            ng-class="{ 'pack-row-success': isPackInQueue(pack) }")
-          .col-sm-1.pack-id
-            span \#{{pack.position}}
-          .col-sm-8.pack-title
-            span {{pack.title}}
-          .col-sm-3.pack-action.text-right
-            a.btn.btn-default.btn-sm(ng-cloak="", ng-show="isAuthenticated() && !isPackInQueue(pack)", enable-when-ready-to-download="",
-                ng-click="addToQueue(pack)", type="button", aria-label=t('app.bot.add_to_queue'), title=t('app.bot.add_to_queue'))
-              span.glyphicon.glyphicon-plus(aria-hidden="true")
-            a.btn.btn-default.btn-sm(type="button", ng-cloak="", ng-if="hasVideoType(pack)", ng-href="{{getSubtitlesUrl(pack)}}",
-                download="", aria-label=t('app.bot.download_subtitles'), title=t('app.bot.download_subtitles'))
-              span.glyphicon.glyphicon-subtitles(aria-hidden="true")
-            a.btn.btn-default.btn-sm.disabled(type="button", aria-label=t('app.bot.inspect'), title=t('app.bot.inspect'))
-              span.glyphicon.glyphicon-eye-open(aria-hidden="true")
+    .col-xs-12.col-sm-8.col-sm-offset-2.pack-list-group
+      .pack-row(ng-repeat="pack in bot.packs | filter:packFilter | orderBy:'position':sortOrder",
+          ng-class="{ 'pack-row-success': isPackInQueue(pack) }")
+        .col-xs-1.col-sm-1.pack-id
+          span \#{{pack.position}}
+        .col-xs-10.col-sm-8.pack-title
+          span {{pack.title}}
+        .col-xs-1.col-sm-3.pack-action.text-right
+          a.btn.btn-default.btn-sm(ng-cloak="", ng-show="isAuthenticated() && !isPackInQueue(pack)", enable-when-ready-to-download="",
+              ng-click="addToQueue(pack)", type="button", aria-label=t('app.bot.add_to_queue'), title=t('app.bot.add_to_queue'))
+            span.glyphicon.glyphicon-plus(aria-hidden="true")
+          a.btn.btn-default.btn-sm(type="button", ng-cloak="", ng-if="hasVideoType(pack)", ng-href="{{getSubtitlesUrl(pack)}}",
+              download="", aria-label=t('app.bot.download_subtitles'), title=t('app.bot.download_subtitles'))
+            span.glyphicon.glyphicon-subtitles(aria-hidden="true")
+          a.btn.btn-default.btn-sm.disabled(type="button", aria-label=t('app.bot.inspect'), title=t('app.bot.inspect'))
+            span.glyphicon.glyphicon-eye-open(aria-hidden="true")
