--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -22,7 +22,7 @@ body header nav {
 
 body header nav .navbar-nav li.login a {
   border: 1px solid #D8D8D8;
-  margin: 10px 0 10px 20px;
+  margin: 10px 15px;
   padding: 4px 13px;
   border-radius: 6px;
   -moz-border-radius: 6px;
