--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -50,7 +50,7 @@ html
               ul.nav.navbar-nav
                 li.login(ng-cloak="", ng-if="!currentUser")
                   a.btn.btn-default.btn-navbar(type="button", href="/login")= t("app.menu.log_in")
-                li(ng-if="currentUser")
+                li(ng-cloak="", ng-if="currentUser")
                   p.navbar-text
                     span.glyphicon.glyphicon-stop(xdcc-client-status="", aria-hidden="true")
                 li(ng-cloak="", ng-if="currentUser", ng-controller="ConnectedUserController")
