remove navbar shadow, more space for the brand

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -11,13 +11,8 @@ body {
   background-size: 30px 30px;
 }
 
-body header nav {
-  width: 100%!important;
-  background-color: #fff;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
-  -moz-box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
-  -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
-  border: none;
+header .navbar-brand {
+  margin-right: 1em;
 }
 
 body header nav .navbar-nav li.login a {
