--- a/src/less/includes/views/queue/index.less
+++ b/src/less/includes/views/queue/index.less
@@ -1,12 +1,9 @@
-// TODO *** Must be a way to import this directly from bootstrap
-@brand-primary: darken(#428bca, 6.5%);
-
 .current-pack {
-  margin-top: 10px;
+  margin-bottom: 30px;
   display: table;
   width: 100%;
   padding: 12px 0;
-  background-color: @brand-primary;
-  color: #ffffff;
+  background-color: #f5f5f5; // gray-hover
   border-radius: 4px;
+  border: 1px solid #ddd; // gray-border
 }
