--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -3,20 +3,11 @@ html
   head
 
     title #{title}
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    meta(name='description', content='')
-    meta(name='author', content='yuyuu')
-    link(rel='icon', type="image/png",   href='/img/favicon.png')
-
-    // Le HTML5 shim, for IE6-8 support of HTML5 elements
-    //
-        [if lt IE 9]
-        <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]
-
-
-
+    meta(charset="utf-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="description", content="")
+    meta(name="author", content="yuyuu")
+    link(rel="icon", type="image/png",   href="/img/favicon.png")
     link(href="//fonts.googleapis.com/css?family=PT+Sans:400,700")
     link(href="/bower_components/bootstrap/dist/css/bootstrap.min.css", rel="stylesheet", type="text/css")
     link(href="/bower_components/angular-loading-bar/build/loading-bar.min.css", rel="stylesheet", type="text/css")
@@ -28,7 +19,7 @@ html
         .container
           .navbar-header
             a.navbar-brand(href="#/")
-            button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
+            button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-main")
               span.icon-bar
               span.icon-bar
               span.icon-bar
