isolate the queue in a service

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 extends include/layout
 block content
-  .content(ng-controller="QueueController")
+  .content(ng-controller="QueueController as queueCtrl")
     ng-view
 
 block js
