--- a/views/include/layout.jade
+++ b/views/include/layout.jade
@@ -26,16 +26,16 @@ html
               span.icon-bar
 
           .collapse.navbar-collapse#navbar-main
-            ul.nav.navbar-nav(ng-controller="MenuLocationController")
-              li(ng-class="{active: isCurrentLocation('/bot')}")
+            ul.nav.navbar-nav(ng-controller="MenuLocationController as menuCtrl")
+              li(ng-class="{active: menuCtrl.isCurrentLocation('/bot')}")
                 a(href="#/bot")= t("app.menu.bots")
-              li(ng-class="{active: isCurrentLocation('/queue')}")
+              li(ng-class="{active: menuCtrl.isCurrentLocation('/queue')}")
                 a(href="#/queue")= t("app.menu.queue")
-            form.navbar-form.navbar-left(role="search", ng-controller="SearchController")
+            form.navbar-form.navbar-left(role="search", ng-controller="SearchController as searchCtrl")
               .form-group
-                input.form-control(type="text", placeholder=t("app.menu.search_placeholder"), ng-model="selection",
-                    typeahead="bot.nickname for bot in search($viewValue)",
-                    typeahead-loading="loading", typeahead-on-select="select($item)"
+                input.form-control(type="text", placeholder=t("app.menu.search_placeholder"), ng-model="searchCtrl.selection",
+                    typeahead="bot.nickname for bot in searchCtrl.search($viewValue)",
+                    typeahead-loading="searchCtrl.loading", typeahead-on-select="searchCtrl.select($item)"
                 )
             .navbar-right
               ul.nav.navbar-nav
