--- a/views/templates/queue/index.jade
+++ b/views/templates/queue/index.jade
@@ -12,16 +12,16 @@
           span {{queueCtrl.currentPack.title}}
   .row(ng-cloak="", ng-show="queueCtrl.queue.length > 0")
     .col-sm-4.col-sm-offset-1.search-field
-      input.form-control(type="text", placeholder=t("app.queue.search"), ng-model="packFilter")
+      input.form-control(type="text", placeholder=t("app.queue.search"), ng-model="model.packFilter")
   .row(ng-cloak="", ng-show="queueCtrl.queue.length > 0")
     .col-sm-10.col-sm-offset-1
       .pack-list-group
-        .pack-row(ng-repeat="pack in queueCtrl.queue.getOrderedPacks() | filter:packFilter")
+        .pack-row(ng-repeat="pack in queueCtrl.queue.getOrderedPacks() | filter:model.packFilter")
           .col-sm-3.pack-title
             span {{pack.botNickname}}
           .col-sm-7.pack-title
             span {{pack.title}}
           .col-sm-2.pack-action.text-right
-            a.btn.btn-danger.btn-sm(type="button", ng-click="removePack(pack)", aria-label="Remove",
+            a.btn.btn-danger.btn-sm(type="button", ng-click="model.removePack(pack)", aria-label="Remove",
                 title=t('app.queue.remove'))
               span.glyphicon.glyphicon-remove(aria-hidden="true")
