--- a/views/templates/error/404.jade
+++ b/views/templates/error/404.jade
@@ -1,6 +1,6 @@
 .jumbotron.text-center
-   h1= t("app.error404.title")
-   p= t("app.error404.description")
+   h1= t("app.errors.404.title")
+   p= t("app.errors.404.description")
       |  (404)
    p
-      a.btn.btn-primary.btn-lg(href="#/", type="button")= t("app.error404.back")
+      a.btn.btn-primary.btn-lg(href="#/", type="button")= t("app.errors.404.back")
