reminder of bot nickname in packs template

--- a/src/less/includes/components.less
+++ b/src/less/includes/components.less
@@ -2,6 +2,11 @@
 @gray-hover: #f5f5f5;
 @success-color: #3c763d;
 
+.bot-header {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
 .pack-list-group {
   margin-top: 10px;
 }
